--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta name="keywords"
         content="image resizer, image compressor, watermark remover, free image editor, online image tool, aspect ratio, mobile image resizer, social media image, optimize images, PixelBoost">
 
+    <!-- Google AdSense Script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9953391348123137"
+     crossorigin="anonymous"></script>
+    <!-- End Google AdSense Script -->
+
     <!-- Favicon - Replace with your actual favicon files -->
     <link rel="icon" href="favicon.ico" sizes="any">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
@@ -264,7 +269,7 @@
                 <ul>
                     <li><strong>Resize & Compress:</strong> Adjust dimensions, aspect ratio, resize mode (Stretch, Fit,
                         Expand), and compression quality. Click "Update Preview".</li>
-                    <li><strong>Watermark Remover:</strong> Drag on the main image preview (top) to select the
+                    <li><strong>Watermark Remover:</b> Drag on the main image preview (top) to select the
                         watermark. Then click "Apply Basic Removal". This works on the current previewed image.</li>
                 </ul>
                 3. <strong>Download:</strong> Once you're happy with the preview in Section 3, click "Download Image".
