--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <section class="support-section animated-section">
             <h2 class="section-title">Support PixelBoost Online</h2>
             <p>If you find this tool useful, please consider supporting its development!</p>
-            <a href="https://www.buymeacoffee.com/yourusername" target="_blank" rel="noopener noreferrer"
+            <a href="https://buymeacoffee.com/ruthar?new=1" target="_blank" rel="noopener noreferrer"
                 class="button-style donate-button"> <!-- Replace yourusername -->
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
                     <path
